# ClaudeUsageDashboard

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SCREENSHOTS.md  TROUBLESHOOTING.md  biome.json  codecov.yml  docker-compose.yml  drizzle.config.ts  electron-builder.yml  instrumentation.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci.yml  codeql-analysis.yml  dependency-review.yml  labeler.yml  pages.yml  pr-validation.yml  release.yml
app/: globals.css  layout.tsx  page.tsx
app/analytics/: page.tsx
app/dashboard/: page.tsx
app/guides/: page.tsx
app/monitoring/: page.tsx
app/projects/: page.tsx
app/sessions/: page.tsx
app/settings/: page.tsx
app/sync/: page.tsx
components/: command-palette.tsx
components/dashboard/: stats-cards.tsx
components/monitoring/: live-logs-panel.tsx  session-picker-modal.tsx  tiling-monitor.tsx
components/sessions/: json-viewer.tsx  message-timeline.tsx
components/shared/: connection-status.tsx  dashboard-layout.tsx  error-boundary.tsx  sidebar.tsx  stat-card.tsx  status-badge.tsx  theme-toggle.tsx  top-bar.tsx
components/ui/: dialog.tsx
drizzle/: 0000_pink_sentinel.sql  0001_glorious_the_stranger.sql
electron/: main.js
scripts/: build-pages-site.ts  check-staged-merge-conflicts.ts  run-screenshot-capture.ts  seed-e2e.ts  sync.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
tests/: setup.ts  setup.ts.disabled
types/: index.ts
(+61 files in other folders)
